iptables
# Generated by iptables-save v1.6.0 on Tue Oct 20 21:31:06 2020
*mangle
:PREROUTING ACCEPT [157676:96321187]
:INPUT ACCEPT [155803:95872010]
:FORWARD ACCEPT [1873:449177]
:OUTPUT ACCEPT [103982:14131544]
:POSTROUTING ACCEPT [105806:14577414]
COMMIT
# Completed on Tue Oct 20 21:31:06 2020
# Generated by iptables-save v1.6.0 on Tue Oct 20 21:31:06 2020
*nat
:PREROUTING ACCEPT [47:6941]
:INPUT ACCEPT [45:2868]
:OUTPUT ACCEPT [28:1794]
:POSTROUTING ACCEPT [28:1794]
-A PREROUTING -d 128.8.238.78/32 -p tcp -m tcp --dport 22 -j DNAT --to-destination 172.20.0.1:10002
-A PREROUTING -d 128.8.238.76/32 -p tcp -m tcp --dport 22 -j DNAT --to-destination 172.20.0.1:10001
-A PREROUTING -d 128.8.238.71/32 -p tcp -m tcp --dport 22 -j DNAT --to-destination 172.20.0.1:10000
-A PREROUTING -d 128.8.238.71/32 -j DNAT --to-destination 172.20.0.201
-A PREROUTING -d 128.8.238.78/32 -j DNAT --to-destination 172.20.0.203
-A PREROUTING -d 128.8.238.76/32 -j DNAT --to-destination 172.20.0.202
-A POSTROUTING -s 172.20.0.201/32 -j SNAT --to-source 128.8.238.71
-A POSTROUTING -s 172.20.0.202/32 -j SNAT --to-source 128.8.238.76
-A POSTROUTING -s 172.20.0.203/32 -j SNAT --to-source 128.8.238.78
COMMIT
# Completed on Tue Oct 20 21:31:06 2020
# Generated by iptables-save v1.6.0 on Tue Oct 20 21:31:06 2020
*filter
:INPUT DROP [215:59908]
:FORWARD DROP [49:3307]
:OUTPUT ACCEPT [103982:14131544]
:tcp_flood - [0:0]
:udp_flood - [0:0]
-A INPUT -i lo -j ACCEPT
-A INPUT -s 172.30.0.0/16 -p tcp -m tcp --dport 22 -m state --state NEW -j ACCEPT
-A INPUT -s 10.255.0.0/16 -p tcp -m tcp --dport 22 -m state --state NEW -j ACCEPT
-A INPUT -s 192.168.11.0/24 -p tcp -m tcp --dport 22 -m state --state NEW -j ACCEPT
-A INPUT -d 172.20.0.1/32 -p tcp -m tcp ! --dport 22 -j ACCEPT
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -m state --state INVALID -j DROP
-A FORWARD -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -s 172.20.0.0/16 -p tcp -j tcp_flood
-A FORWARD -s 172.20.0.0/16 -p udp -j udp_flood
-A FORWARD -s 172.20.0.1/32 -d 172.20.0.0/16 -i vmbr0 -o vmbr0 -j ACCEPT
-A FORWARD -s 172.20.0.0/16 -d 172.20.0.1/32 -i vmbr0 -o vmbr0 -j ACCEPT
-A FORWARD -s 172.20.0.0/16 -d 172.20.0.0/16 -i vmbr0 -o vmbr0 -j DROP
-A FORWARD -d 172.20.0.0/16 -p tcp -m tcp --dport 22 -m state --state NEW -j ACCEPT
-A FORWARD -p icmp -m icmp --icmp-type any -j ACCEPT
-A FORWARD -s 172.20.0.0/16 -j ACCEPT
-A tcp_flood -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name TCP_FLOOD --hashlimit-htable-expire 60000 -m state --state NEW -j RETURN
-A tcp_flood -j DROP
-A udp_flood -m hashlimit --hashlimit-upto 1/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name UDP_FLOOD --hashlimit-htable-expire 60000 -j RETURN
-A udp_flood -j DROP
COMMIT
# Completed on Tue Oct 20 21:31:06 2020
